--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ This is a torque testing logsheet webpage which the operator can input and expor
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Table</title>
+	<title>Torque testing webpage</title>
     <style>
         table, th,td{
             border: 1px solid black;
