--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Project done by syed mateen,9 sep 2022 at schneider electric during the course of internship.
-This is a torque testing logsheet webpage which the operator can input and export it as excel-->
+This is a torque testing logsheet webpage which the operator can input the various data in a table and export it as excel-->
 
 
 <!DOCTYPE html>
